      motif_score(), scan_sequences(), score_match(): new allow.nonfinite
      parameter, allowing for the functions to work even if non-finite values
      are present in the motif PWM.

    o read_matrix(..., comment): allows for comments to be ignored in motif
      files.

    o write_matrix(..., digits): control the number of digits to use for
      writing motif positions.

MINOR CHANGES

    o read_matrix(..., positions): added partial argument matching.

    o create_sequences(), shuffle_sequences(), motif_pvalue(): the c++ random
      engine has been changed from std::default_random_engine to std::mt19937.
      This should allow for the same rng.seed value to result in the same
      output regardless of OS.

    o score_match() has been vectorized (alongside new prob_match() function).

    o The ape and ggtree packages are now no longer imported and must be
      installed seperately in order to use motif_tree().

    o The processx package is no longer imported and must be installed
      seperately in order to use run_meme().

    o The pseudocount slot is now shown when universalmotif class objects are
      printed.

    o General documentation cleanup.

CHANGES IN VERSION 1.6.4
------------------------

BUG FIXES

    o cbind(): do not ignore the pseudocount slot.

    o Fixed typo in IntroductionToSequenceMotifs.Rmd.

    o Fixed U() function in IntroductionToSequenceMotifs.Rmd, no longer returns
      NA values if 0s are present.

    o read_cisbp(): no parsing errors for motifs with missing/partial header
      info.

CHANGES IN VERSION 1.6.3
------------------------

BUG FIXES

    o scan_sequences(): commented out WIP code for scanning gapped motifs.

CHANGES IN VERSION 1.6.2
------------------------

BUG FIXES

    o motif_tree(): 'daylight' layout is no longer disabled.

CHANGES IN VERSION 1.6.1
------------------------

BUG FIXES

    o summarise_motif(): properly retrieves altname slot. Contribution from