@@ -28,6 +28,7 @@ export(get_scores)
 export(icm_to_ppm)
 export(log_string_pval)
 export(make_DBscores)
+export(mask_seqs)
 export(merge_motifs)
 export(motif_peaks)
 export(motif_pvalue)
