@@ -4,12 +4,15 @@
 \alias{utils-sequence}
 \alias{count_klets}
 \alias{get_klets}
+\alias{mask_seqs}
 \alias{shuffle_string}
 \title{Sequence-related utility functions.}
 \usage{
 count_klets(string, k = 1, alph)
 
 get_klets(lets, k = 1)
+
+mask_seqs(seqs, pattern, RC = FALSE, letter = "-")
 
 shuffle_string(string, k = 1, method = c("euler", "linear", "markov"),
   rng.seed = sample.int(10000, 1))
@@ -25,6 +28,14 @@ sequence alphabet. If missing, finds the unique letters in the string.}
 \item{lets}{\code{character} A character vector where each element will be
 considered a single unit.}
 
+\item{seqs}{\code{XStringSet} Sequences to mask. Cannot be \code{BStringSet}.}
+
+\item{pattern}{\code{character(1)} Pattern to mask.}
+
+\item{RC}{\code{logical(1)} Whether to mask the reverse complement of the pattern.}
+
+\item{letter}{\code{character(1)} Character to use for masking.}
+
 \item{method}{\code{character(1)} Shuffling method. One of \code{c("euler", "linear", "markov")}. See \code{\link[=shuffle_sequences]{shuffle_sequences()}}.}
 
 \item{rng.seed}{\code{numeric(1)} Set random number generator seed. Since shuffling
@@ -39,6 +50,8 @@ run in serial.}
 For \code{\link[=count_klets]{count_klets()}}: A \code{data.frame} with columns \code{lets} and \code{counts}.
 
 For \code{\link[=get_klets]{get_klets()}}: A \code{character} vector of k-lets.
+
+For \code{\link[=mask_seqs]{mask_seqs()}}: The masked \code{XStringSet} object.
 
 For \code{\link[=shuffle_string]{shuffle_string()}}: A single \code{character} string.
 }
@@ -60,6 +73,12 @@ get_klets(c("A", "C", "G", "T"), 3)
 ## Note that each element in 'lets' is considered a single unit;
 ## see:
 get_klets(c("AA", "B"), k = 2)
+
+#######################################################################
+## mask_seqs
+## Mask repetitive seqeuences
+data(ArabidopsisPromoters)
+mask_seqs(ArabidopsisPromoters, "AAAAAA")
 
 #######################################################################
 ## shuffle_string
