@@ -25,6 +25,8 @@ NEW FEATURES
     o write_matrix(..., digits): control the number of digits to use for
       writing motif positions.
 
+    o New mask_seqs() utility function: inject hard masks into sequences.
+
 MINOR CHANGES
 
     o read_matrix(..., positions): added partial argument matching.
